# mvl-stereo-toolbox

./: CMakeLists.txt  GuiCalibration.cpp  GuiCalibration.h  GuiImageSource.cpp  GuiImageSource.h  GuiStereoMethod.cpp  GuiStereoMethod.h  ImageDisplayWidget.cpp  ImageDisplayWidget.h  ImageSource.cpp  ImageSource.h  ImageSourceDC1394.cpp  ImageSourceDC1394.h  ImageSourceFile.cpp  ImageSourceFile.h  MVLStereoToolbox.pro  README  StereoCalibration.cpp  StereoCalibration.h  StereoMethod.cpp  StereoMethod.h  StereoMethodBeliefPropagationGPU.cpp  StereoMethodBeliefPropagationGPU.h  StereoMethodBlockMatching.cpp  StereoMethodBlockMatching.h  StereoMethodBlockMatchingGPU.cpp  StereoMethodBlockMatchingGPU.h  StereoMethodConstantSpaceBeliefPropagationGPU.cpp  StereoMethodConstantSpaceBeliefPropagationGPU.h  StereoMethodELAS.cpp  StereoMethodELAS.h  StereoMethodSemiGlobalBlockMatching.cpp  StereoMethodSemiGlobalBlockMatching.h  StereoMethodVar.cpp  StereoMethodVar.h  StereoPipeline.cpp  StereoPipeline.h  Toolbox.cpp  Toolbox.h  Toolbox.ui  (+1 more)
gui/: GuiImageSource.cpp  (+2 more)
methods/opencv_bm/: CMakeLists.txt  StereoMethodBlockMatching.cpp  StereoMethodBlockMatching.h  plugin.cpp
methods/opencv_contrib_var/: CMakeLists.txt  StereoMethodVar.cpp  StereoMethodVar.h  StereoMethodVarConfigWidget.cpp  plugin.cpp
methods/opencv_gpu_bp/: CMakeLists.txt  StereoMethodBeliefPropagationGPU.cpp  StereoMethodBeliefPropagationGPU.h  plugin.cpp
pipeline/: CMakeLists.txt  ImagePairSource.cpp  ImagePairSource.h  ImageSource.cpp  ImageSource.h  PluginFactory.h  StereoCalibration.cpp  StereoCalibration.h  StereoCalibrationPattern.cpp  StereoCalibrationPattern.h  StereoMethod.cpp  StereoMethod.h  StereoPipeline.cpp  StereoPipeline.h  StereoRectification.cpp  StereoRectification.h  StereoReprojection.cpp  StereoReprojection.h  image_pair_source.cpp  image_pair_source.h  libmvl_stereo_pipeline.pc.in  plugin_factory.h  plugin_manager.cpp  plugin_manager.h  stereo_calibration_pattern.cpp  stereo_calibration_pattern.h  stereo_method.cpp  stereo_method.h  stereo_pipeline.cpp  stereo_pipeline.h  stereo_rectification.cpp  stereo_rectification.h  stereo_reprojection.cpp  stereo_reprojection.cu  stereo_reprojection.h
pipeline/methods/elas/: CMakeLists.txt  StereoMethodELAS.cpp  StereoMethodELAS.h  StereoMethodELASConfigWidget.cpp  StereoMethodELASConfigWidget.h  method.cpp  method.h  method_widget.cpp  method_widget.h  plugin.cpp
pipeline/methods/opencv_bm/: CMakeLists.txt  StereoMethodBlockMatching.cpp  StereoMethodBlockMatching.h  StereoMethodBlockMatchingConfigWidget.cpp  StereoMethodBlockMatchingConfigWidget.h  method.cpp  method.h  method_widget.cpp  method_widget.h  plugin.cpp
sources/dc1394/: CMakeLists.txt  CameraDC1394.cpp  CameraDC1394.h  CameraDC1394ConfigWidget.h  CameraListModel.cpp  CameraListModel.h  ImageSourceDC1394.cpp  ImageSourceDC1394.h  ImageSourceDC1394ConfigWidget.cpp  ImageSourceDC1394ConfigWidget.h  plugin.cpp
sources/file/: CMakeLists.txt  ImageSourceFile.cpp  ImageSourceFile.h  ImageSourceFileConfigWidget.h  plugin.cpp
stereo-pipeline/: CMakeLists.txt  calibration_pattern.cpp  calibration_pattern.h  calibration_pattern_p.h  disparity_visualization.cpp  disparity_visualization.h  disparity_visualization_p.h  exception.cpp  exception.h  image_pair_source.h  libmvl_stereo_pipeline.pc.in  libvml_stereo_pipeline-config.cmake.in  pipeline.cpp  pipeline.h  pipeline_p.h  plugin_factory.h  plugin_manager.cpp  plugin_manager.h  plugin_manager_p.h  rectification.cpp  rectification.h  rectification_p.h  reprojection.cpp  reprojection.cu  reprojection.h  reprojection_p.h  stereo_method.h  utils.cpp  utils.h
stereo-pipeline/pipeline-async/: element.cpp  element.h  method_element.cpp  method_element.h  rectification_element.cpp  rectification_element.h  reprojection_element.cpp  reprojection_element.h  source_element.cpp  source_element.h  visualization_element.cpp  visualization_element.h
stereo-widgets/: CMakeLists.txt  calibration_pattern_display_widget.cpp  calibration_pattern_display_widget.h  calibration_pattern_display_widget_p.h  disparity_display_widget.cpp  disparity_display_widget.h  disparity_display_widget_p.h  image_display_widget.cpp  image_display_widget.h  image_display_widget_p.h  image_pair_display_widget.cpp  image_pair_display_widget.h  image_pair_display_widget_p.h  libmvl_stereo_widgets-config.cmake.in  libmvl_stereo_widgets.pc.in  point_cloud_visualization_widget.cpp  point_cloud_visualization_widget.h  point_cloud_visualization_widget_p.h  reprojection_display_widget.cpp  reprojection_display_widget.h  reprojection_display_widget_p.h  stereo-widgets.qrc
stereo-widgets/shaders/: basic_element.vert  pointcloud.frag  volumetric_line.frag  volumetric_line.geom  volumetric_line.vert
toolbox/: CMakeLists.txt  CalibrationPatternDetectionDialog.cpp  CalibrationPatternDetectionDialog.h  CalibrationPatternDisplayWidget.cpp  CalibrationPatternDisplayWidget.h  CalibrationPatternSettingsDialog.cpp  CalibrationPatternSettingsDialog.h  CalibrationWizard.cpp  CalibrationWizard.h  GuiCalibration.cpp  GuiCalibration.h  GuiImagePairSource.cpp  GuiImagePairSource.h  GuiImageSource.cpp  GuiImageSource.h  GuiPointCloud.cpp  GuiPointCloud.h  GuiRectification.cpp  GuiRectification.h  GuiReprojection.cpp  GuiReprojection.h  GuiStereoMethod.cpp  GuiStereoMethod.h  ImageDisplayWidget.cpp  ImageDisplayWidget.h  ImagePairDisplayWidget.cpp  ImagePairDisplayWidget.h  ReprojectedImageDisplayWidget.cpp  ReprojectedImageDisplayWidget.h  Toolbox.cpp  Toolbox.h  calibration_wizard.cpp  calibration_wizard.h  image_display_widget.cpp  image_display_widget.h  main.cpp  point_cloud_visualization_widget.cpp  point_cloud_visualization_widget.h  toolbox.cpp  toolbox.h  (+10 more)
toolbox/calibration-wizard/: calibration_flags_widget.cpp  calibration_flags_widget.h  camera_parameters_widget.cpp  camera_parameters_widget.h  page_calibration.cpp  page_calibration.h  page_detection.cpp  page_detection.h  page_images.cpp  page_images.h  page_introduction.cpp  page_introduction.h  page_result.cpp  page_result.h  wizard.cpp  wizard.h
(+329 files in other folders)
